--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "otaku-home-web-services",
   "version": "1.0.0",
   "description": "web service to manage otaku home application",
-  "main": "app",
+  "main": "index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "npx nodemon app.js"
+    "serve": "npx nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "moment": "^2.29.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4"
   }
 }
