--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.5.2",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "speakeasy": "^2.0.0",
+    "xss-clean": "^0.1.1"
   }
 }
