--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "qrcode": "^1.5.1",
     "speakeasy": "^2.0.0",
     "xss-clean": "^0.1.1"
