--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 mongoDB = mongodb+srv://Otaku_Home:01013223497Aa@booody.ctnrb.mongodb.net/Otaku_Home?retryWrites=true&w=majority
+jwt_sec = IAmBoOodY01013223497
+pass_sec = 1486097IAmBoOodY
