--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,10 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/index"
+            "program": "${workspaceFolder}/index.js",
+            "restart":true,
+            // "runtimeExecutable": "nodemon",
+            "console": "integratedTerminal"
         }
     ]
 }
