--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.5.2",
+    "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "nodemailer": "^6.7.8",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "qrcode": "^1.5.1",
